# liquidagent

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  agent-project.md  bloby-reference.md  build.rs  check.sh  flake.nix  package.json
default-workspace/: .gitignore  MEMORY.md  MYHUMAN.md  MYSELF.md  PULSE.json
default-workspace/apps/stronglifts/: app.json  index.html
default-workspace/apps/stronglifts/backend/: index.ts
default-workspace/apps/whiteboard/: .gitignore
default-workspace/apps/whiteboard/config/: config.exs  runtime.exs
default-workspace/apps/whiteboard/lib/whiteboard/: application.ex
default-workspace/apps/whiteboard/lib/whiteboard_web/: board_channel.ex
default-workspace/apps/whiteboard/priv/static/: index.html
docs/adr/: 0001-effect-and-typing-discipline.md  0002-polyglot-buildable-apps.md  0003-full-surface-apps-and-ws-proxy.md  0004-builtin-app-library.md
docs/ideas/: browser-extension.md
e2e/: attachments.ts  shell-smoke.ts  smoke.ts  stronglifts.ts  whiteboard.ts
e2e/fixtures/whiteboard/: app.json  mix.exs
e2e/fixtures/whiteboard/lib/whiteboard/: strokes.ex
nix/: module.nix
spikes/: README.md
src/: agent.rs  api.rs  apps.rs  auth.rs  backends.rs  catalog.rs  config.rs  db.rs  deploy.rs  main.rs  push.rs  scheduler.rs  ws.rs
static/: chat.html  shell.html  shell.js  sw.js  tsconfig.json
workspace/agent/: fake-harness.ts  fake-review.ts  harness.ts  ipc.test.ts  ipc.ts  package.json  prompt.test.ts  prompt.ts  protocol.json  protocol.test.ts  protocol.ts  review.ts  screenshot.ts  tsconfig.json
(+7 files in other folders)
