[package]
name = "liquid"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Self-hosted AI agent and personal software factory"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
