[package]
name = "liquid"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Self-hosted AI agent and personal software factory"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
data-encoding = "2"
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
